<?xml version="1.0"?>
<package>
  <name>bling_bot</name>
  <version>0.0.1</version>
  <description>The bling_bot package</description>

  <maintainer email="narosenberg@wpi.edu">Nathan Rosenberg</maintainer>

  <license>TODO</license>

  <run_depend>openni2_launch</run_depend>
  <run_depend>gmapping</run_depend>
  <run_depend>ros_serial</run_depend>

  <buildtool_depend>catkin</buildtool_depend>

  <export>

  </export>
</package>
